--- a/app/src/main/res/layout/item_featured_event.xml
+++ b/app/src/main/res/layout/item_featured_event.xml
@@ -41,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#88000000"
-            android:paddingTop="10dp"
+            android:paddingVertical="10dp"
             android:paddingBottom="10dp"
             app:layout_constraintBottom_toBottomOf="parent">
 
@@ -83,7 +83,7 @@
                 android:textColor="#FFFFFFFF"
                 android:textSize="10sp"
                 app:layout_constraintBottom_toTopOf="@+id/tv_time"
-                app:layout_constraintEnd_toStartOf="@+id/textView31"
+                app:layout_constraintEnd_toStartOf="@+id/tv_find_buddy"
                 app:layout_constraintStart_toStartOf="@+id/tv_time"
                 app:layout_constraintTop_toBottomOf="@+id/tv_title"
                 tools:text="Present by [vendor]" />
@@ -100,7 +100,7 @@
                 android:textSize="10sp"
                 app:drawableStartCompat="@mipmap/icon_time"
                 app:layout_constraintBottom_toTopOf="@+id/tv_interesterd"
-                app:layout_constraintEnd_toStartOf="@+id/textView31"
+                app:layout_constraintEnd_toStartOf="@+id/tv_find_buddy"
                 app:layout_constraintStart_toStartOf="@+id/tv_interesterd"
                 app:layout_constraintTop_toBottomOf="@+id/tv_title1"
                 app:layout_goneMarginBottom="17dp"
@@ -121,7 +121,7 @@
                 tools:text="xx interested" />
 
             <TextView
-                android:id="@+id/textView31"
+                android:id="@+id/tv_find_buddy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
@@ -138,9 +138,9 @@
                 android:id="@+id/tv_des"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="2dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="12dp"
                 android:maxLines="3"
                 android:ellipsize="end"
                 android:textColor="@color/white"
