--- a/app/src/main/res/layout/item_just_for_you.xml
+++ b/app/src/main/res/layout/item_just_for_you.xml
@@ -1,10 +1,13 @@
-<com.hula.myapplication.HulaPartyItemLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.hula.myapplication.widget.ShapeableFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="168dp"
+    android:layout_width="160dp"
     android:layout_height="200dp"
     android:layout_marginEnd="8dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/textView13"
-    app:shapeAppearance="@style/RoundedStyle20" />
+    app:shapeAppearance="@style/RoundedStyle20">
+
+    <com.hula.myapplication.HulaPartyItemLayout
+        android:id="@+id/partylayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</com.hula.myapplication.widget.ShapeableFrameLayout>
