1.邀请好友 2.隐私 3.新消息 4.帮助中心 ui

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="app_main_color">#8E73D3</color>
+    <color name="color_8ab93e">#8ab93e</color>
     <color name="color_898989">#898989</color>
     <color name="color_878787">#878787</color>
     <color name="color_2e2e2e">#2E2E2E</color>
