--- a/app/src/main/res/layout/view_party.xml
+++ b/app/src/main/res/layout/view_party.xml
@@ -60,7 +60,7 @@
             android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/tv_3"
-            app:layout_constraintEnd_toStartOf="@+id/imageView8"
+            app:layout_constraintEnd_toStartOf="@+id/iv_persion"
             app:layout_constraintStart_toStartOf="@+id/tv_3"
             app:layout_constraintTop_toBottomOf="@+id/tv_1"
             tools:text="TextView" />
@@ -77,7 +77,7 @@
             android:textSize="10sp"
             app:drawableStartCompat="@mipmap/icon_time"
             app:layout_constraintBottom_toTopOf="@id/tv_4"
-            app:layout_constraintEnd_toStartOf="@+id/imageView8"
+            app:layout_constraintEnd_toStartOf="@+id/iv_persion"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_2"
             tools:text="TextView" />
@@ -92,13 +92,13 @@
             android:textColor="@color/white"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/textView18"
+            app:layout_constraintEnd_toStartOf="@+id/tv_persion_info"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_3"
             tools:text="TextView" />
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imageView8"
+            android:id="@+id/iv_persion"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_marginEnd="16dp"
@@ -109,13 +109,13 @@
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/textView18"
+            android:id="@+id/tv_persion_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:textSize="10sp"
             android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="@+id/imageView8"
+            app:layout_constraintEnd_toEndOf="@+id/iv_persion"
             app:layout_constraintTop_toTopOf="@+id/tv_4"
             tools:text="Recommended by Mark" />
 
