--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,32 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/shape_def_windowbg"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <com.hula.myapplication.widget.HuLaActionBar
-        android:id="@+id/action_bar"
-        style="@style/defActionBarStyle"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:acb_enableBack="false"
-        app:acb_title="">
+        android:layout_height="match_parent"
+        android:background="@drawable/shape_def_windowbg"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+
+        <com.hula.myapplication.widget.HuLaActionBar
+            android:id="@+id/action_bar"
+            style="@style/defActionBarStyle"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|start"
-            android:layout_marginStart="8dp"
-            android:orientation="horizontal">
+            app:acb_enableBack="false"
+            app:acb_title="">
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|start"
+                android:layout_marginStart="8dp"
+                android:orientation="horizontal">
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:elevation="5dp"
+                    android:src="@mipmap/icon_persion_null"
+                    app:shapeAppearance="@style/CircleStyle" />
+
+
+                <com.hula.myapplication.widget.HuLaActionBarMenu
+                    android:id="@+id/icon_lick"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:background="@drawable/shape_oval_fff"
+                    android:elevation="5dp"
+                    android:padding="10dp"
+                    app:menu_src="@mipmap/icon_unlove" />
+            </LinearLayout>
+
+            <com.hula.myapplication.widget.HuLaActionBarMenu
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_oval_fff"
                 android:elevation="5dp"
-                android:src="@mipmap/icon_persion_null"
-                app:shapeAppearance="@style/CircleStyle" />
+                android:padding="10dp"
+                app:menu_src="@mipmap/icon_notice" />
 
 
             <com.hula.myapplication.widget.HuLaActionBarMenu
@@ -34,48 +59,36 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:background="@drawable/shape_oval_fff"
+                android:backgroundTint="#8E73D3"
                 android:elevation="5dp"
                 android:padding="10dp"
-                app:menu_src="@mipmap/icon_unlove" />
-        </LinearLayout>
+                app:menu_src="@mipmap/icon_add" />
 
-        <com.hula.myapplication.widget.HuLaActionBarMenu
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shape_oval_fff"
-            android:elevation="5dp"
-            android:padding="10dp"
-            app:menu_src="@mipmap/icon_notice" />
+        </com.hula.myapplication.widget.HuLaActionBar>
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
-        <com.hula.myapplication.widget.HuLaActionBarMenu
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:background="@drawable/shape_oval_fff"
-            android:backgroundTint="#8E73D3"
-            android:elevation="5dp"
-            android:padding="10dp"
-            app:menu_src="@mipmap/icon_add" />
+            <View
+                android:id="@+id/holdView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
-    </com.hula.myapplication.widget.HuLaActionBar>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp" />
+        </FrameLayout>
+
+    </LinearLayout>
 
     <FrameLayout
+        android:id="@+id/layout_next_page"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent"/>
 
-        <View
-            android:id="@+id/holdView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp" />
-    </FrameLayout>
-
-</LinearLayout>
+</FrameLayout>
