--- a/app/src/main/res/layout/view_action_bar.xml
+++ b/app/src/main/res/layout/view_action_bar.xml
@@ -9,13 +9,13 @@
 
     <ImageView
         android:id="@+id/iv_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="8dp"
         android:background="@drawable/shape_oval_fff"
         android:elevation="5dp"
-        android:padding="5dp"
+        android:padding="10dp"
         android:src="@mipmap/ic_back"
         android:visibility="visible" />
 
