--- a/app/src/main/res/layout/view_party.xml
+++ b/app/src/main/res/layout/view_party.xml
@@ -22,8 +22,10 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_gravity="end|top"
-        android:layout_margin="12dp"
         android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="12dp"
         android:background="@drawable/shape_oval_9c9c9c"
         android:padding="7dp"
         android:src="@mipmap/icon_unlove_fff" />
