--- a/app/src/main/res/layout/fragment_mine_edit.xml
+++ b/app/src/main/res/layout/fragment_mine_edit.xml
@@ -244,6 +244,7 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/ll_job_title"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -261,7 +262,7 @@
                         android:textSize="13dp" />
 
                     <TextView
-                        android:id="@+id/tv_job_time"
+                        android:id="@+id/tv_job_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical|start"
