--- a/app/src/main/res/layout/dialog_search_top.xml
+++ b/app/src/main/res/layout/dialog_search_top.xml
@@ -101,9 +101,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="26dp"
                 android:visibility="gone"
-                tools:itemCount="6"
-                tools:listitem="@layout/item_simple_select_text"
-                tools:visibility="gone" />
+                tools:itemCount="3"
+                tools:listitem="@layout/item_search_sections"
+                tools:visibility="visible" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView2"
