--- a/app/src/main/res/layout/dialog_search_top.xml
+++ b/app/src/main/res/layout/dialog_search_top.xml
@@ -6,6 +6,9 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
+        android:id="@+id/layout_content"
+        android:focusableInTouchMode="true"
+        android:focusable="true"
         style="@style/defActionBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,6 +28,8 @@
                 android:orientation="horizontal">
 
                 <EditText
+                    android:imeOptions="actionSearch"
+                    android:inputType="text"
                     android:id="@+id/tv_search"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
